--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Mandali&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap');
 *{
+  font-family: 'Mandali', sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
