--- a/app/modelos/page.module.css
+++ b/app/modelos/page.module.css
@@ -10,7 +10,7 @@
     border: 10px rgb(255, 179, 0) inset;
     background-image: linear-gradient( rgb(37, 37, 54), rgb(56, 56, 92));
     margin: 20px 100px;
-    padding: 20px 0;
+    padding: 40px 20px;
 }
 .img{
     max-width: 350px;
@@ -25,7 +25,7 @@
 }
 .title{
     font-family: 'Yeseva One', serif;
-    font-size: 150%;
+    font-size: 200%;
     color: rgb(199, 139, 0);
     background-image: linear-gradient(#b98200, #ffc94c);
     background-clip: text;
@@ -37,15 +37,13 @@
     align-items: center;
     justify-content: space-evenly;
     margin-bottom: 30px;
-    gap: 20px;
 }
 .infoContainer2{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    gap: 40px;
 }
 .info{
-    max-width: 20%;
+    max-width: 30%;
 
 }
