--- a/app/components/card/card.module.css
+++ b/app/components/card/card.module.css
@@ -11,15 +11,18 @@
 .titleContainer{
     position: absolute;
     z-index: 2;
-    top: 0;
+}
+.titleContainer:hover {
+    transform: scale(1.1) !important;
 }
 .container:hover .title {
     cursor: pointer;
 }
 .description{
     font-family: 'Mandali', sans-serif;
-    font-size: 100%;
     margin-left: 30px;
+    min-width: 80%;
+    max-width: 50%;
 }
 .container:hover .description{
     cursor: pointer;
@@ -29,7 +32,7 @@
     transform: scale(1.1);
     opacity: 0.8;
 }
-.container, .title, .description {
+.container, .title, .description .titleContainer {
     transition: all 0.3s ease;
 }
 .img{
@@ -57,8 +60,6 @@
    background-position: center;
    background-repeat: no-repeat;
     padding: 5px;
-    top: 10px;
-    left: 10px;
     width: 250px; /* Set a specific width */
     height: 250px; /* Set a specific height */
 }
