--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,3 +1,19 @@
 .container{
+    color: #fdfcfc;
+}
+.container{
     background-image: linear-gradient(rgb(37, 37, 54), rgb(56, 56, 92));
+}
+.title{
+    font-family: 'Mandali', sans-serif;
+    font-size: 500%;
+}
+.link{
+    font-family: 'Yeseva One', serif;
+    font-size: 200%;
+    color: rgb(199, 139, 0);
+    background-image: linear-gradient(#b98200, #ffc94c);
+    background-clip: text;
+   -webkit-text-fill-color: transparent;
+
 }
