--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,49 +1,64 @@
 .container{
-    color: #fdfcfc;
+    background-image: linear-gradient(to right, #252536, #38385c);
+    color: #dfddeb;
 }
-.container{
-    background-image: linear-gradient(rgb(37, 37, 54), rgb(56, 56, 92));
+.section1{
+    display: flex;
+    flex-direction: column;
 }
-.title{
-    font-family: 'Mandali', sans-serif;
-    font-size: 500%;
+.mainText, .linkSection{
+    margin: 40px;
+    font-size: 150%;
+    align-items: center;
+    text-align: center;
 }
-.titleFade {
-    font-family: 'Mandali', sans-serif;
-    font-size: 500%;
-    background-image: linear-gradient(#fff, #fff);
-    background-clip: text;
-   -webkit-text-fill-color: transparent;
-   margin-left: 60rem;
-    padding-top: 30rem;
-    width: 100%;
+.hr{
+    width: 50%;
+    opacity: 0.3;
+    align-items: center;
+    
+    margin: 50px;
+}
+.arrowIcon{
+    margin-left: 30px;
+    width: 90px;
+    transition: ease 0.5s;
 }
 .link{
-    font-family: 'Yeseva One', serif;
-    font-size: 500%;
-    width: 100%;
-    color: rgb(199, 139, 0);
-    background-image: linear-gradient(#b98200, #ffc94c);
-    margin-left: 60rem;
-    padding-top: 30rem;
-    background-clip: text;
-   -webkit-text-fill-color: transparent;
+    text-decoration: none;
+    color: #dfddeb;
+    font-size: 200%;
 
 }
-.banner{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://i.pinimg.com/originals/5a/ab/18/5aab18d5d3ba0f96c7091cc4cc3aae3d.jpg");
+.link:hover{
+    transition: ease 0.5s;
+    border-bottom: 2px solid #dfddeb;
+}
+.title{
+    font-size: 200%;
+    margin-bottom: 20px;
+}
+.subtitle{
+    font-family: 'Yeseva One', serif;
+    font-size: 400%;
+   margin-bottom: 90px;
+   transition: ease 0.5s;
+}
+.subtitle:hover{
+    cursor: pointer;
+    transition: ease 0.5s;
+    color: rgb(255, 205, 87);
+    text-shadow: 2px 2px 20px rgba(255, 198, 66, 0.75);
+}
+.linkSection:hover .arrowIcon{
+    transition: ease 0.5s;
+    transform: translateX(10px);
+}
+.img{
     mask-image: linear-gradient(to top, transparent 0.1%, black 100%);  
-    max-height: 1800px;
-    padding-bottom: 350px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    z-index: 1;
-}
-.bannerText{
-    /*z-index: 9999; */
-    /*position: absolute;*/
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    max-width: 100%;
+    max-height: 100%;
 }
