--- a/app/page.module.css
+++ b/app/page.module.css
@@ -5,6 +5,7 @@
 .section1{
     display: flex;
     flex-direction: column;
+    margin-top: 40px;
 }
 .mainText, .linkSection{
     margin: 40px;
@@ -16,7 +17,7 @@
     width: 50%;
     opacity: 0.3;
     align-items: center;
-    
+
     margin: 50px;
 }
 .arrowIcon{
@@ -48,7 +49,7 @@
     cursor: pointer;
     transition: ease 0.5s;
     color: rgb(255, 205, 87);
-    text-shadow: 2px 2px 20px rgba(255, 198, 66, 0.75);
+    text-shadow: 2px 2px 20px rgba(255, 198, 66, 0.40);
 }
 .linkSection:hover .arrowIcon{
     transition: ease 0.5s;
