--- a/app/page.module.css
+++ b/app/page.module.css
@@ -7,6 +7,11 @@
     flex-direction: column;
     margin-top: 40px;
 }
+.section2{
+    display: flex;
+    flex-direction: column;
+    margin-top: 60rem;
+}
 .mainText, .linkSection{
     margin: 40px;
     font-size: 150%;
