--- a/app/components/header/header.module.css
+++ b/app/components/header/header.module.css
@@ -1,4 +1,117 @@
-.global{
-    background-color: yellow 0.9;
+.nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #000;
+    position: sticky;
+    top: 0;
+}
 
+.nav .title{
+    font-size: 1.5rem;
+    margin: 1rem;
+    font-weight: bold;
+    text-decoration: none;
+    color: #fff;
+}
+
+.nav .ul{
+    display: flex;
+}
+.nav .ul .li{
+    list-style: none;
+    font-size: 25px;
+}
+
+.nav .ul .li a{
+    display: block;
+    text-decoration: none;
+    color: #fff;
+    padding: 0.5rem;
+    margin: 0 0.5rem;
+    border-radius: 0.5rem;
+}
+ .li:hover{
+    background-color: rgb(69, 70, 66);
+    transition: 0.3s;
+    opacity: 10px;
+    border-radius: 10px;
+ }
+
+.nav .menu{
+    display: flex;
+    position: absolute;
+    top: 0.75rem;
+    right: 0.5rem;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 2.25rem;
+    height: 2rem;
+}
+
+.nav .menu span{
+    height: 0.4rem;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 0.2rem;
+}
+.logo{
+    width: 70px;
+    height: 70px;
+}
+
+.line{
+    display: none;
+}
+
+@media(max-width: 480px){
+    .nav
+    .menu{
+        display: flex;
+    }
+    .li:hover{
+        background-color: rgb(69, 70, 66);
+        transition: 0.3s;
+        opacity: 10px;
+        border-radius: 10px;
+     }
+
+    .nav{
+        flex-direction: column;
+        align-items: start;
+    }
+
+    .line{
+        display: flex;
+    }
+    .nav
+    .ul{
+     display: none; 
+        flex-direction: column;
+        width: 100%;
+        margin-bottom: 0.25rem;
+    }
+
+    .menu{
+        margin-top: 20px;
+        margin-right: 10px;
+    }
+    .nav 
+    .ul.open{
+        display: flex;
+    }
+
+    .nav
+    .ul
+    .li{
+        width: 100%;
+        text-align: center;
+    }
+
+    .nav
+    .ul
+    .li
+    a{
+        margin: 0.2rem 0.5rem;
+    }
 }
