--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,29 +1,29 @@
 .container{
-    background-image: linear-gradient(to right, #252536, #38385c);
+    background-image: linear-gradient(to right, #252536, #616189);
     color: #dfddeb;
 }
 .section1{
     display: flex;
     flex-direction: column;
     margin-top: 40px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 .section2{
     display: flex;
     flex-direction: column;
     margin-top: 10rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
 }
 .mainText, .linkSection{
     margin: 40px;
     font-size: 150%;
     align-items: center;
     text-align: center;
-}
-.hr{
-    width: 50%;
-    opacity: 0.3;
-    align-items: center;
-
-    margin: 50px;
 }
 .arrowIcon{
     margin-left: 30px;
@@ -33,7 +33,7 @@
 .link{
     text-decoration: none;
     color: #dfddeb;
-    font-size: 200%;
+    font-size: 100%;
 
 }
 .link:hover{
@@ -61,10 +61,15 @@
     transform: translateX(10px);
 }
 .img{
+    align-items: center;
     mask-image: linear-gradient(to top, transparent 0.1%, black 100%);  
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    max-width: 100%;
-    max-height: 100%;
+    width: 1200px;
+    height: 675px;
+    border-radius: 10px;
+}
+.divisory{
+    width: 100%;
 }
