--- a/app/sobreHP/sobrehp.module.css
+++ b/app/sobreHP/sobrehp.module.css
@@ -21,9 +21,14 @@
 }
 
 .text {
-    max-width: 600px;
+    margin-top: 80px;
+    max-width: 80%;
+    font-size: 20px;
     line-height: 1.6;
     text-align: justify;
+    margin-left: 140px;
+    margin-right: 20px;
+    margin-bottom: 20px;
 }
 
 .filme {
@@ -35,4 +40,75 @@
     height: 300px;
     object-fit: cover;
     margin-bottom: 10px;
+}
+.container{
+    background-image: linear-gradient(to right, #252536, #616189);
+    color: #dfddeb;
+}
+.title{
+    padding-top: 80px;
+    font-size: 300%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.subtitle{
+    text-align: center;
+    font-family: 'Yeseva One', serif;
+    font-size: 400%;
+   margin-bottom: 90px;
+   transition: ease 0.5s;
+}
+.subtitle:hover{
+    cursor: pointer;
+    transition: ease 0.5s;
+    color: rgb(255, 205, 87);
+    text-shadow: 2px 2px 20px rgba(255, 198, 66, 0.40);
+}
+
+.image{
+   margin-left: 80px;
+}
+.divisory{
+    width: 100%;
+}
+.nomes{
+    text-align: center;
+   margin-bottom: 90px;
+   transition: ease 0.5s;
+   font-family: 'Yeseva One', serif;
+   font-size: 200%;
+   color: rgb(199, 139, 0);
+   background-image: linear-gradient(#b98200, #ffc94c);
+   background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.nomes:hover{
+    cursor: pointer;
+    transition: ease 0.5s;
+    color: rgb(255, 205, 87);
+    text-shadow: 2px 2px 20px rgba(255, 198, 66, 0.40);
+}
+.paragrafo{
+    width: 50%;
+    margin-top: 22px;
+    margin-left: 40px;
+}
+.img2{
+    margin-left: 150px;
+}
+.paragrafo2{
+    justify-content: center;
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+.img{
+    border-radius: 10px;
+    mask-image: linear-gradient(to top, transparent 0.1%, black 100%);  
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.card{
+    display: flex;
 }
